--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+header{
+  background-color: #29AB87;
+  padding: 20px;
+}
+header h2{
+  color: #fff;
+  max-width: 1200px;
+  margin: auto;
+}
